# teseu

./: .gitignore  README.md  pyproject.toml  requirements.txt
teseu/: api.py  chopper.py  cli.py  db.py  generator.py  indexer.py  jobs.py  search.py
teseu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
ui/src/components/: ComposeArea.tsx  GenerateInput.tsx  LibraryModal.tsx  LibraryPanel.tsx  MiniPlayer.tsx  OptionsPanel.tsx  OutputSection.tsx  PillSlider.tsx  PreviewPanel.tsx  SampleChopCard.tsx  SampleChopTimeline.tsx  WavePlayer.tsx  WordChips.tsx
